--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint .",
+		"format": "eslint --cache . --fix",
+		"lint": "eslint --cache .",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
 		"db:push": "drizzle-kit push",
@@ -16,18 +17,18 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
+		"@antfu/eslint-config": "^3.8.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@types/eslint": "^9.6.0",
+		"@unocss/eslint-plugin": "^0.62.4",
 		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.7.0",
+		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
 	},
