--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "npm run test:unit -- --run",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "prepare": "husky"
   },
   "dependencies": {
     "@inlang/paraglide-sveltekit": "^0.11.1",
@@ -34,10 +35,15 @@
     "eslint": "^9.7.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-svelte": "^2.36.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,json,html,svelte}": "bun format"
   }
 }
