feat: add mode-watcher

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "drizzle-orm": "^0.36.3",
+    "mode-watcher": "^0.5.0",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
