--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.1",
     "@unocss/eslint-plugin": "^0.64.1",
     "@unocss/extractor-svelte": "^0.64.1",
+    "@vsilk/unocss-preset-daisyui": "^0.0.4",
     "concurrently": "^9.1.0",
+    "daisyui": "^4.12.14",
     "drizzle-kit": "^0.28.1",
     "eslint": "^9.15.0",
     "eslint-plugin-format": "^0.1.2",
@@ -50,6 +52,7 @@
     "svelte-check": "^4.0.9",
     "typescript": "^5.6.3",
     "unocss": "^0.64.1",
+    "unocss-preset-animations": "^1.1.0",
     "vite": "^5.4.11",
     "vitest": "^2.1.5"
   },
