--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-svelte": "^2.46.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "std-env": "^3.8.0",
     "svelte": "^5.2.2",
     "svelte-check": "^4.0.9",
     "typescript": "^5.6.3",
