--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.11.2",
-    "@unocss/eslint-plugin": "^0.65.0-beta.3",
+    "@unocss/eslint-plugin": "^0.65.0",
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
     "eslint-plugin-svelte": "^2.46.1",
