--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -22,10 +22,10 @@
     "@node-rs/argon2": "^2.0.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "drizzle-orm": "^0.36.4",
-    "postgres": "^3.4.5"
+    "drizzle-orm": "^0.36.4"
   },
   "devDependencies": {
+    "@electric-sql/pglite": "^0.2.14",
     "@playwright/test": "^1.49.0",
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.9.0",
