--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -22,6 +22,7 @@
     "@node-rs/argon2": "^2.0.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.36.4"
   },
   "devDependencies": {
