--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -23,7 +23,8 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "drizzle-orm": "^0.36.4"
+    "drizzle-orm": "^0.36.4",
+    "svelte-boring-avatars": "^1.2.6"
   },
   "devDependencies": {
     "@electric-sql/pglite": "^0.2.14",
