--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@ameinhardt/unocss-preset-daisy": "^1.1.0",
     "@antfu/eslint-config": "^3.11.2",
-    "@unocss/eslint-plugin": "^0.65.0",
+    "@unocss/eslint-plugin": "^0.65.1",
+    "@unocss/extractor-svelte": "^0.65.1",
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
     "eslint-plugin-svelte": "^2.46.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.3",
+    "unocss": "^0.65.1"
   },
   "lint-staged": {
     "*.{js,ts,json,html,svelte}": "bun format"
