--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -21,6 +21,7 @@
     "@oslojs/encoding": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.36.4",
+    "std-env": "^3.8.0",
     "svelte-boring-avatars": "^1.2.6"
   },
   "devDependencies": {
