--- a/shared/db/package.json
+++ b/shared/db/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.37.0",
     "std-env": "^3.8.0"
   },
