--- a/shared/logic/package.json
+++ b/shared/logic/package.json
@@ -3,6 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "main": "index.js",
+  "scripts": {
+    "format": "eslint --cache . --fix",
+    "lint": "eslint --cache ."
+  },
   "dependencies": {
     "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
