--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,6 +18,7 @@
     "@inlang/paraglide-sveltekit": "^0.12.1",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
+    "@std/datetime": "npm:@jsr/std__datetime",
     "drizzle-orm": "^0.37.0",
     "std-env": "^3.8.0",
     "svelte-boring-avatars": "^1.2.6"
