--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "turbo run dev --filter=./apps/*",
     "lint": "turbo run lint",
     "format": "eslint --cache . --fix",
+    "test": "turbo run test",
     "prepare": "husky"
   },
   "devDependencies": {
