--- a/shared/logic/package.json
+++ b/shared/logic/package.json
@@ -11,10 +11,10 @@
     "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "drizzle-orm": "^0.38.2",
-    "std-env": "^3.8.0"
+    "drizzle-orm": "*",
+    "std-env": "*"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^2.12.1"
+    "@sveltejs/kit": "*"
   }
 }
