--- a/package.json
+++ b/package.json
@@ -14,18 +14,41 @@
     "test": "turbo run test",
     "prepare": "husky"
   },
+  "dependencies": {
+    "@inlang/paraglide-sveltekit": "^0.15.0",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
+    "@std/datetime": "npm:@jsr/std__datetime",
+    "drizzle-orm": "^0.38.2",
+    "mode-watcher": "^0.5.0",
+    "std-env": "^3.8.0",
+    "svelte-boring-avatars": "^1.2.6"
+  },
   "devDependencies": {
-    "@ameinhardt/unocss-preset-daisy": "^1.1.2",
+    "@ameinhardt/unocss-preset-daisy": "^1.1.3",
     "@antfu/eslint-config": "^3.12.0",
-    "@unocss/eslint-plugin": "^0.65.1",
-    "@unocss/extractor-svelte": "^0.65.1",
+    "@iconify-json/fluent": "^1.2.11",
+    "@iconify-json/octicon": "^1.2.2",
+    "@playwright/test": "^1.49.1",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.15.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@unocss/eslint-plugin": "^0.65.2",
+    "@unocss/extractor-svelte": "^0.65.2",
+    "daisyui": "^4.12.22",
     "eslint": "^9.17.0",
     "eslint-plugin-format": "^0.1.3",
     "eslint-plugin-svelte": "^2.46.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
+    "mdsvex": "^0.12.3",
+    "svelte": "^5.15.0",
+    "svelte-check": "^4.1.1",
     "turbo": "^2.3.3",
-    "unocss": "^0.65.1"
+    "typescript": "^5.7.2",
+    "unocss": "^0.65.2",
+    "vite": "^6.0.5",
+    "vitest": "^2.1.8"
   },
   "lint-staged": {
     "*.{js,ts,json,html,svelte}": "bun format"
