--- a/shared/db/package.json
+++ b/shared/db/package.json
@@ -15,14 +15,15 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@std/collections": "npm:@jsr/std__collections",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.2",
-    "std-env": "^3.8.0"
+    "drizzle-orm": "*",
+    "std-env": "*"
   },
   "devDependencies": {
     "@electric-sql/pglite": "^0.2.15",
     "@hugoalh/range-iterator": "^2.1.0",
     "@std/path": "npm:@jsr/std__path",
-    "drizzle-kit": "^0.30.1",
-    "drizzle-seed": "^0.1.3"
+    "drizzle-kit": "*",
+    "drizzle-seed": "^0.1.3",
+    "node-html-parser": "^6.1.13"
   }
 }
