--- a/shared/db/package.json
+++ b/shared/db/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
-    "@std/collections": "npm:@jsr/std__collections",
+    "@std/collections": "*",
     "dotenv": "^16.4.7",
     "drizzle-orm": "*",
     "std-env": "*"
